# hotel-reviews

./: README.md  pyproject.toml  slides.md
data/: adjectives.csv  noun-phrases.csv  preprocessed.csv
hotel_reviews/: common.py  plot_avglen_rating.py  plot_neg_pos_count.py  plot_neg_pos_rating.py  plot_rating_count.py  plot_rating_nounphrases.py  plot_sentiment_3d.py  preprocess.py  rating_nounphrases.py
