[project]
name = "hotel-reviews"
version = "0.1.0"
description = "Hotel reviews text mining project"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "beautifulsoup4>=4.12.3",
    "matplotlib>=3.10.0",
    "nltk==3.8.1",
    "numpy>=2.2.1",
    "pandas>=2.2.3",
    "scienceplots>=2.1.1",
    "scipy>=1.14.1",
    "spacy>=3.8.3",
    "textblob>=0.18.0.post0",
    "tqdm>=4.67.1",
    "wordcloud>=1.9.4",
]

[tool.setuptools]
packages = ["hotel_reviews"]
